2005-07-13  Robert Schuster  <robertschuster@fsfe.org>

	* javax/swing/AbstractButton.java: Minimal documentation fixes.
	(getActionCommand): Returns button's label when
	actionCommand is null.
	* javax/swing/JButton.java,
	javax/swing/JToggleButton.java: Removed explicit call to
	setActionCommand in constructors.

2005-07-13  Robert Schuster  <robertschuster@fsfe.org>

	* javax/swing/JToggleButton.java:
	(paramString): Returns value of same method in superclass now.
	* javax/swing/JRadioButton.java:
	(paramString): Dito.
	* javax/swing/JButton.java:
	(paramString): Returns value of same method in superclass now,
	more verbose information added.
	* javax/swing/JCheckBox.java:
	(paramString): Dito.

2005-07-12  Aaron Luchko  <aluchko@redhat.com>

	* gnu/classpath/jdwp/processor/FieldCommandSet.java:
	Implemented the Field CommandSet.
	* gnu/classpath/jdwp/processor/InterFaceTypeCommandSet.java:
	Implemented the InterfaceType CommandSet.

2005-07-12  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/plaf/basic/BasicMenuItemUI.java:
	(paintMenuItem): Replaced incorrect hilighting criteria.
	(paintText): Likewise.

2005-07-12 Lillian Angel <langel@redhat.com>

	* examples/gnu/classpath/examples/swing/Demo.java
	(mkTree): no need to make root visible, it is by default
	(mkTreeWorld): no need to make root visible, it is by default	 

2005-07-12 Lillian Angel <langel@redhat.com>

	* javax/swing/plaf/basic/BasicTreeUI.java
	(paintLeaf): fixed size of selection background to depend on 
	if icon exists
	(paintNonLeaf): fixed size of selection background to depend on
	if icon exists

2005-07-12  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/DefaultButtonModel.java:
	(changeState): If the button is a JToggleButton fire action events
	when it changes between (selected/unselected) not when it changes
	from pressed to unpressed.  Fire action events after firing
	ItemStateChanged events.

2005-07-12  Aaron Luchko  <aluchko@redhat.com>
